<resources>
    <string name="app_name">OPENUP</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_name">Display Name</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_date">Birthdate</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_occupation">Occupation</string>
    <string name="prompt_condition">Medical Condition</string>
    <string name="prompt_expertise">Expertise</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_none">Not Specified</string>
    <string name="occupation_1">Other Occupation</string>
    <string name="occupation_2">Military/Civil Service</string>
    <string name="occupation_3">Freelancer</string>
    <string name="occupation_4">Employee</string>
    <string name="occupation_5">Retiree</string>
    <string name="occupation_6">Student</string>
    <string name="condition_1">No Medical Condition</string>
    <string name="condition_2">Mental Disorder</string>
    <string name="condition_3">Chronic Disease</string>
    <string name="expertise_1">Other Expertise</string>
    <string name="expertise_2">Love</string>
    <string name="expertise_3">Family</string>
    <string name="expertise_4">Work</string>
    <string name="expertise_5">School</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_save_info">Save</string>
    <string name="action_skip_info">Skip</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_to_register">No Account Yet? Sign Up</string>
    <string name="action_sign_in_to_consultant">Are you a consultant? Click Here</string>
    <string name="action_consultant_to_sign_in">Are you a client? Click Here</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_exist_email">This email address already exists</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_unmatched_password">This password is not matched</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="success_sign_up">Sign up Successful</string>


    <string name="title_activity_nearby_clinics">Map</string>

    <string name="title_filter">Filter</string>
    <string name="card_name">Name</string>
    <string name="card_gender">Gender</string>
    <string name="card_age">Age</string>
    <string name="card_expertise">Expertise</string>


    <string-array name="place_type">
        <item>doctor</item>
        <item>hospital</item>
    </string-array>

    <string-array name="place_type_name">
        <item>Doctor</item>
        <item>Hospital</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="startvideocall">Start Video Call</string>
</resources>

