<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.example.nut.wireless_project_openup.InfoRegisActivity"
    android:background="#ffffff">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutOccupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/SpinnerOccupation"
                android:layout_height="wrap_content"
                android:prompt="@string/prompt_occupation"
                android:layout_width="fill_parent"
                android:entries="@array/occupation_list">
            </Spinner>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/SpinnerCondition"
                android:layout_height="wrap_content"
                android:prompt="@string/prompt_condition"
                android:layout_width="fill_parent"
                android:entries="@array/condition_list">
            </Spinner>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_date"
                android:inputType="date"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/SpinnerGender"
                android:layout_height="wrap_content"
                android:prompt="@string/prompt_gender"
                android:layout_width="fill_parent"
                android:entries="@array/gender_list">
            </Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appCompatButtonSkipInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/mainbutton"
                    android:text="@string/action_skip_info"
                    android:textColor="#ffffff" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appCompatButtonSaveInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/mainbutton"
                    android:backgroundTint="#0E699C"
                    android:text="@string/action_save_info"
                    android:textColor="#ffffff" />

            </LinearLayout>

        </android.support.design.widget.TextInputLayout>


    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
